<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        style="@style/BasketFragments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:text="@string/DELIVERY_ADDRESS"/>

        <RadioGroup
            android:id="@+id/genderSwitch"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/switch_gender"
            android:orientation="horizontal">

            <RadioButton
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginStart="1dp"
                android:id="@+id/man"
                android:background="@drawable/button_gender"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:text="@string/MR"
                android:fontFamily="sans-serif-light"
                android:textColor="@android:color/black" />

            <RadioButton
                android:layout_marginEnd="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:id="@+id/woman"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_gender"
                android:button="@null"
                android:gravity="center"
                android:checked="true"
                android:text="@string/MS"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textColor="@android:color/black" />
        </RadioGroup>

        <EditText
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/fragment_delivery_edittext_background"
            android:hint="@string/LASTNAME"
            android:inputType="text|textCapWords"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/fragment_delivery_edittext_background"
            android:hint="@string/FIRSTNAME"
            android:inputType="text|textCapWords"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:textColor="@android:color/black" />


        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/fragment_delivery_edittext_background"
            android:hint="@string/ADDRESS"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:gravity="center_vertical"/>

        <EditText
            android:id="@+id/additional_address"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/fragment_delivery_edittext_background"
            android:hint="@string/COMPLEMENT_ADDRESS"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:textColor="@android:color/black" />


        <EditText
            android:id="@+id/postal_code"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/fragment_delivery_edittext_background"
            android:hint="@string/ZIPCODE"
            android:inputType="textPostalAddress"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:textColor="@android:color/black" />


        <EditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/fragment_delivery_edittext_background"
            android:hint="@string/CITY"
            android:inputType="text|textCapWords"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:textColor="@android:color/black" />


        <TextView
            android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:background="@drawable/fragment_delivery_edittext_background"
            android:hint="@string/COUNTRY"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:textSize="14sp"
            android:textColor="@android:color/black" />


        <LinearLayout
            android:id="@+id/same_billing_delivery_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <CheckBox
                android:id="@+id/same_billing_delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimaryDark"
                android:checked="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/SAME_ADDRESS"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/validate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/summary_validate_button"
            android:gravity="center"
            android:text="@string/VALIDATE"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>
</ScrollView>