<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="center" android:background="@drawable/fond_triangle">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="70dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:src="@drawable/product_album_header"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/PHOTO_BOOK"
                    android:textColor="@color/piics_black"
                    android:textSize="36sp"/>

                <TextView
                    android:id="@+id/describe_print"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/PHOTO_BOOK_DESC"
                    android:textColor="@color/piics_black"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/BASELINE"
                    android:textColor="@color/piics_black"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/BOOK"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/piics_black"
                    android:textSize="18sp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/couv_souple"
                        android:layout_marginRight="40dp" />

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginRight="40dp"
                        android:src="@drawable/taille"/>

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/additional_page"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="40dp"
                        android:gravity="center"
                        android:textColor="@color/piics_black"
                        android:textSize="10sp"
                        android:text="@string/SOFTCOVER"/>

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="40dp"
                        android:gravity="center"
                        android:textColor="@color/piics_black"
                        android:textSize="10sp"
                        android:text="@string/SIZE"/>

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/piics_black"
                        android:textSize="10sp"
                        android:text="@string/MAX_PAGE"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="40dp"
                        android:gravity="center"
                        android:textColor="@color/piics_black"
                        android:textSize="10sp"
                        android:text="@string/SOFT"/>

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="40dp"
                        android:gravity="center"
                        android:textColor="@color/piics_black"
                        android:textSize="10sp"
                        android:text="20 x 20 cm"/>

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/piics_black"
                        android:textSize="10sp"
                        android:text="@string/PAGES"/>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="15dp">

                    <ImageView
                        android:id="@+id/picto_infos"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_alignParentLeft="true"
                        android:src="@drawable/album_infos"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="2dp"
                        android:layout_toRightOf="@+id/picto_infos"
                        android:textColor="@color/piics_black"
                        android:textSize="10sp"
                        android:text="@string/ADDITIONAL_PAGE_DESC"/>


                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/SHIPMENT"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/piics_black"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/SHIPMENT_DESC"
                    android:textColor="@color/piics_black"
                    android:textSize="14sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SHIPMENT_BOOK_COST"
                    android:textColor="@color/piics_black"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/CUSTOMISATION"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/piics_black"
                    android:textSize="18sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:src="@drawable/gabarits_blanc"/>

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:src="@drawable/smiley_blanc"/>

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:src="@drawable/texte_blanc"/>

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:src="@drawable/fonds_blanc"/>

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:src="@drawable/filtres_blanc"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/piics_black"
                        android:text="@string/GABARIT"/>

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/piics_black"
                        android:text="@string/STICKERS"/>

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/piics_black"
                        android:text="@string/TEXT"/>

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/piics_black"
                        android:text="@string/BACKGROUND"/>

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/piics_black"
                        android:text="@string/FILTER"/>


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


    <TextView
        android:id="@+id/validate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/summary_validate_button"
        android:gravity="center"
        android:text="@string/SELECT_PHOTOS"
        android:textColor="#ffffff"
        android:textSize="20sp" />

</RelativeLayout>