<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/BasketFragments"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GIVE_EMAIL"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/text"
        android:background="@drawable/fragment_delivery_edittext_background"
        android:hint="@string/ADDRESSEMAIL"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/validate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/summary_validate_button"
        android:gravity="center"
        android:text="@string/VALIDATE"
        android:textColor="#ffffff"
        android:textSize="20sp" />

</RelativeLayout>